G + MMB Doesn't work in Graph Editor if the transform orientation is set to 'Local' #77206

Closed
opened 2020-05-30 17:51:43 +02:00 by Likkez · 4 comments

System Information
Operating system: Linux-5.3.0-7648-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-30 15:12, hash: 515e8e4f7c
Worked: 2.83

Short description of error
2020-05-30 18-43-12.mp4
The G+MMB shortcut has stopped working. It works when the orientation is set to 'Global' but not when its set to 'Local'. The issue also spreads to Drivers Editor.
Exact steps for others to reproduce the error

  1. open attached file
    graph_editor_bug.blend
  2. try to move a keyframe in graph editor using G + Middle mouse button
  3. switch orientation to 'Global'
  4. try to move a keyframe in graph editor using G + Middle mouse button
**System Information** Operating system: Linux-5.3.0-7648-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-30 15:12, hash: `515e8e4f7c` Worked: 2.83 **Short description of error** [2020-05-30 18-43-12.mp4](https://archive.blender.org/developer/F8565757/2020-05-30_18-43-12.mp4) The G+MMB shortcut has stopped working. It works when the orientation is set to 'Global' but not when its set to 'Local'. The issue also spreads to Drivers Editor. **Exact steps for others to reproduce the error** 1. open attached file [graph_editor_bug.blend](https://archive.blender.org/developer/F8565762/graph_editor_bug.blend) 2. try to move a keyframe in graph editor using G + Middle mouse button 3. switch orientation to 'Global' 4. try to move a keyframe in graph editor using G + Middle mouse button
Author

Added subscriber: @Likkez-2

Added subscriber: @Likkez-2

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by ba711824b3

This issue was referenced by ba711824b3aec2ab4678e50f15b75cd417f56a70

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-05-30 23:13:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77206
No description provided.